--- a/ZotPad/MainStoryboard_iPad.storyboard
+++ b/ZotPad/MainStoryboard_iPad.storyboard
@@ -152,6 +152,7 @@
                     <connections>
                         <segue destination="3" kind="relationship" relationship="masterViewController" id="9"/>
                         <segue destination="42" kind="relationship" relationship="detailViewController" id="53"/>
+                        <segue destination="bpw-6z-DmG" kind="modal" identifier="AuthenticationSeque" modalPresentationStyle="pageSheet" id="jVu-Eo-vW4"/>
                     </connections>
                 </splitViewController>
             </objects>
@@ -189,6 +190,42 @@
             </objects>
             <point key="canvasLocation" x="843" y="-179"/>
         </scene>
+        <scene sceneID="kZo-Vw-R2l">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tOl-Er-2a8" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController title="Login to Zotero" modalPresentationStyle="pageSheet" id="bpw-6z-DmG" customClass="ZPAuthenticationDialog" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="h8h-R3-ciQ">
+                        <rect key="frame" x="0.0" y="0.0" width="768" height="768"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" id="Gj2-V7-ipd">
+                                <rect key="frame" x="0.0" y="0.0" width="768" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <items>
+                                    <navigationItem title="Login to Zotero" id="ELS-Rt-bzu"/>
+                                </items>
+                            </navigationBar>
+                            <webView contentMode="scaleToFill" id="g43-sE-XbP">
+                                <rect key="frame" x="0.0" y="44" width="768" height="724"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <connections>
+                                    <outlet property="delegate" destination="bpw-6z-DmG" id="dmt-0N-Uz3"/>
+                                </connections>
+                            </webView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
+                    </view>
+                    <nil key="simulatedBottomBarMetrics"/>
+                    <modalPageSheetSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                    <connections>
+                        <outlet property="webView" destination="g43-sE-XbP" id="8Iy-P9-OMw"/>
+                    </connections>
+                </viewController>
+            </objects>
+            <point key="canvasLocation" x="-438" y="-1375"/>
+        </scene>
         <scene sceneID="50">
             <objects>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="49" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -219,6 +256,12 @@
         </scene>
     </scenes>
     <classes>
+        <class className="ZPAuthenticationDialog" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/ZPAuthenticationDialog.h"/>
+            <relationships>
+                <relationship kind="outlet" name="webView" candidateClass="UIWebView"/>
+            </relationships>
+        </class>
         <class className="ZPDetailViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/ZPDetailViewController.h"/>
             <relationships>
